<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/blade_runner_2049">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/primary"
            android:fitsSystemWindows="true"
            android:background="#8C000000">

            <RelativeLayout
                android:id="@+id/rl_movie_info"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="160dp"
                    android:layout_height="220dp"
                    android:src="@drawable/blade_runner_2049"
                    android:scaleType="fitXY"/>

                <!-- Change with Frame Layout -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/iv_favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_black_50dp"
                        android:tint="@color/accent"
                        />

                    <TextView
                        android:id="@+id/lbl_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6.5"
                        android:layout_alignBottom="@id/iv_favourite"
                        android:layout_alignLeft="@id/iv_favourite"
                        android:layout_alignRight="@id/iv_favourite"
                        android:layout_alignTop="@id/iv_favourite"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:textColor="@color/text_whilte"
                        android:textStyle="bold|italic"/>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_maximize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="115dp"
                    android:layout_marginTop="175dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_crop_free_black_35dp"
                    android:tint="@color/text_whilte" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_movie_poster">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/lbl_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_title"
                            android:textColor="@color/text_whilte"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/lbl_movie_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_content"
                            android:layout_below="@id/lbl_movie_title"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/text_whilte"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </ScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <RatingBar
                    android:id="@+id/rb_rating"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="20dp"
                    android:progressBackgroundTint="#fca311"
                    android:theme="@style/RatingBar"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:transformPivotX="0dp"
                    />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Released : January 2017"
                    android:paddingLeft="16dp"
                    android:paddingBottom="8dp"
                    android:layout_below="@id/rb_rating"
                    android:textColor="@color/text_whilte"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_movies_details_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_news_details_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_description">

            <TextView
                android:id="@+id/tv_movie_redemption"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="The Shawshank Redemption"
                android:gravity="left|center"
                android:paddingLeft="14dp"
                android:textSize="20sp"
                android:textColor="@color/secondary_text"
                android:textStyle="bold"
                android:background="@color/background_amber"
                />

            <TextView
                android:id="@+id/tv_category_drama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Drama"
                android:layout_below="@id/tv_movie_redemption"
                android:padding="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_light"
                android:textSize="14sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/lbl_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:layout_below="@id/tv_movie_redemption"
                android:layout_toRightOf="@id/tv_category_drama"
                android:layout_alignBottom="@id/tv_category_drama"
                android:textColor="@color/text_whilte"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:gravity="bottom"
                />

            <TextView
                android:id="@+id/tv_category_Crime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Crime"
                android:layout_below="@id/tv_movie_redemption"
                android:layout_toRightOf="@id/lbl_divider"
                android:layout_alignBottom="@id/lbl_divider"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_light"
                android:textSize="14sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 hrs 22 mins"
                android:layout_below="@id/tv_category_drama"
                android:layout_alignLeft="@id/tv_category_drama"
                android:textSize="14sp"
                android:textColor="@color/text_whilte"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:background="@drawable/text_bordor"
                />

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_movies_trailer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tv_movie_duration"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                />

            <TextView
                android:id="@+id/lbl_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_review"
                android:layout_below="@id/vp_movies_trailer"
                android:layout_alignLeft="@id/tv_movie_duration"
                android:textColor="@color/text_whilte"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/lbl_review_user_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_review_user_one"
                android:layout_below="@id/lbl_review"
                android:layout_alignLeft="@id/lbl_review"
                android:textColor="@color/text_whilte"
                android:lineSpacingMultiplier="1.3"
                android:textSize="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/lbl_review_user_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_review_user_two"
                android:layout_below="@id/lbl_review_user_one"
                android:layout_alignLeft="@id/lbl_review_user_one"
                android:textColor="@color/text_whilte"
                android:lineSpacingMultiplier="1.3"
                android:textSize="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/tv_news_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_description"
                android:layout_below="@id/lbl_review_user_two"
                android:layout_margin="16dp"
                android:lineSpacingMultiplier="1.3"
                android:textColor="@color/text_whilte"
                android:textSize="16sp"
                />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favourite_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_anchor="@id/app_bar_details"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginRight="16dp"
        app:fabSize="normal"
        />

</android.support.design.widget.CoordinatorLayout>